added link to docker images

--- a/src/main/latex/happy-adams-manual/happy-adams-manual.tex
+++ b/src/main/latex/happy-adams-manual/happy-adams-manual.tex
@@ -75,6 +75,14 @@ The following GDAL commands are supported:
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Docker images}
+Below are pointers to source code for Docker images used by this module:
+\begin{tight_itemize}
+  \item \textit{GDAL} -- \url{https://github.com/wairas/happy-gdal-docker}{}
+  \item \textit{Spectral Python} -- \url{https://github.com/wairas/happy-spy-docker}{}
+\end{tight_itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{bibliography}
 
 \end{document}
