added support for spy-utilities commands; added ability to override global pull behavior in local commands via pullType option

--- a/src/main/latex/happy-adams-manual/bibliography.tex
+++ b/src/main/latex/happy-adams-manual/bibliography.tex
@@ -12,35 +12,20 @@
 		\url{https://adams.cms.waikato.ac.nz/}{}
 
 	\bibitem{snapshots}
-		\textit{ADAMS Snapshots} -- daily builds of Ravensdown-specific ADAMS \\
-		\url{https://adams.cms.waikato.ac.nz/snapshots/ravensdown/}{}
+		\textit{ADAMS Snapshots} -- daily builds of Happy-specific ADAMS \\
+		\url{https://adams.cms.waikato.ac.nz/snapshots/happy/}{}
 
-	\bibitem{git}
-		\textit{git} -- a free and open source distributed version control
-		system designed to handle everything from small to very large
-		projects with speed and efficiency.  \\
-		\url{https://git-scm.com/}{}
+	\bibitem{docker}
+  	\textit{Docker} -- a set of platform as a service (PaaS) products that use OS-level
+	  virtualization to deliver software in packages called containers \\
+	  \url{https://www.docker.com/}{}
 
-	\bibitem{git-basics}
-		\textit{Git Basics} -- tutorial covering the basics of the git \\
-		\url{https://git-scm.com/book/en/v2/Getting-Started-Git-Basics}{}
+	\bibitem{gdal}
+		\textit{GDAL} -- GDAL is a translator library for raster and vector geospatial data formats.  \\
+		\url{https://gdal.org/}{}
 
-	\bibitem{python}
-		\textit{Python} -- is a programming language that lets you
-		work more quickly and integrate your systems more effectively. \\
-		\url{https://www.python.org/}{}
-
-	\bibitem{django}
-		\textit{Django Project} -- Framework for developing web applications
-		 written in Python \\
-		\url{https://www.djangoproject.com/}{}
-
-	\bibitem{regexp_tutorial}
-		\textit{Java Tutorials} -- Lesson: Regular Expressions \\
-		\url{https://docs.oracle.com/javase/tutorial/essential/regex/}{}
-
-	\bibitem{regexp_javadoc}
-		\textit{Pattern class} -- Javadoc documentation \\
-		\url{https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html}{}
+	\bibitem{spy}
+		\textit{SPy (Spectral Python)} -- a pure Python module for processing hyperspectral image data. \\
+		\url{http://www.spectralpython.net/}{}
 
 \end{thebibliography}
