--- a/src/main/latex/happy-adams-manual/happy-adams-manual.tex
+++ b/src/main/latex/happy-adams-manual/happy-adams-manual.tex
@@ -92,6 +92,7 @@ The following GDAL commands are supported:
 \section{SPy}
 The following Spy commands are supported:
 \begin{tight_itemize}
+  \item \textit{EnviInfo} -- outputs information about an ENVI file (\textit{spy-envi\_info}).
   \item \textit{EnviToRGB} -- turns an ENVI file into an RGB one (\textit{spy-envi\_to\_rgb}).
 \end{tight_itemize}
 
@@ -102,6 +103,7 @@ Below are pointers to the source code for the Docker images used by this module:
 \begin{tight_itemize}
   \item \textit{GDAL} -- \url{https://github.com/wairas/happy-gdal-docker}{}
   \item \textit{Spectral Python} -- \url{https://github.com/wairas/happy-spy-docker}{}
+  \item \textit{spy-utilities} -- \url{https://github.com/wairas/happy-spy-utilities-docker}{}
 \end{tight_itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
